--- a/config/config.example.json
+++ b/config/config.example.json
@@ -5,6 +5,7 @@
       "restrict_to_workspace": true,
       "model_name": "gpt4",
       "max_tokens": 8192,
+      "max_tokens_fallback": 8192,
       "temperature": 0.7,
       "max_tool_iterations": 20
     }
