--- a/web/package.json
+++ b/web/package.json
@@ -33,6 +33,8 @@
     "@angular/platform-browser": "^21.1.0",
     "@angular/router": "^21.1.0",
     "@tailwindcss/postcss": "^4.2.1",
+    "highlight.js": "^11.11.1",
+    "marked": "^17.0.3",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0"
   },
@@ -40,6 +42,8 @@
     "@angular/build": "^21.1.3",
     "@angular/cli": "^21.1.3",
     "@angular/compiler-cli": "^21.1.0",
+    "@types/highlight.js": "^10.1.0",
+    "@types/marked": "^6.0.0",
     "autoprefixer": "^10.4.27",
     "jsdom": "^27.1.0",
     "postcss": "^8.5.6",
