feat(chat,markdown): replace markdown renderer with ngx-mkd and add theme integration
- Use ngx-mkd component to render assistant/user messages instead of manual markdown -> innerHTML rendering\n- Add ngx-mkd, mermaid, katex, github-markdown-css deps (web/package.json & pnpm-lock)\n- Update angular.json to include markdown and highlight style bundles and KaTeX\n- Extend ThemeService to manage markdown & hljs theme stylesheet links and keep in sync with dark/light mode\n- Wire theme into ChatComponent and update imports\n\nBuilt and verified the web UI; theme switching renders markdown in both light and dark modes.

--- a/web/angular.json
+++ b/web/angular.json
@@ -31,6 +31,27 @@
             ],
             "styles": [
               "src/styles.scss",
+              "node_modules/katex/dist/katex.min.css",
+              {
+                "input": "node_modules/github-markdown-css/github-markdown-light.css",
+                "inject": false,
+                "bundleName": "markdown-light"
+              },
+              {
+                "input": "node_modules/github-markdown-css/github-markdown-dark.css",
+                "inject": false,
+                "bundleName": "markdown-dark"
+              },
+              {
+                "input": "node_modules/highlight.js/styles/github.css",
+                "inject": false,
+                "bundleName": "hljs-light"
+              },
+              {
+                "input": "node_modules/highlight.js/styles/github-dark.css",
+                "inject": false,
+                "bundleName": "hljs-dark"
+              },
               {
                 "input": "src/styles/highlight-light.scss",
                 "inject": false,
