--- a/web/package.json
+++ b/web/package.json
@@ -33,8 +33,12 @@
     "@angular/platform-browser": "^21.1.0",
     "@angular/router": "^21.1.0",
     "@tailwindcss/postcss": "^4.2.1",
+    "github-markdown-css": "^5.9.0",
     "highlight.js": "^11.11.1",
+    "katex": "^0.16.33",
     "marked": "^17.0.3",
+    "mermaid": "^11.12.3",
+    "ngx-mkd": "^0.0.2",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0"
   },
